# Labor

semester_2/open_cv/: CMakeLists.txt
semester_2/open_cv/scr/: canny_edges.cpp
semester_2/read_nummer_as_array/: CMakeLists.txt  array.cpp  run_cmake.sh
semester_2/stl/: CMakeLists.txt
semester_2/templates/src/: main.cpp
